--- a/index.html
+++ b/index.html
@@ -14,29 +14,38 @@
 <main>
 <div class="mainbox">
 
-  <div class="star-circle">
-    <img src="./images/icon-star.svg" alt="">
-  </div>
+ <div class="margin-mainbox">
 
-  <h1>How did we do?</h1>
-
-  <p>Please let us know how we did with your support request. All feedback is appreciated 
-    to help us improve our offering!</p>
-
-    <div class="rating-section">
-      <button class="btn1"></button>
-      <button class="btn2"></button>
-      <button class="btn3"></button>
-      <button class="btn4"></button>
-      <button class="btn5"></button>
+    <div class="star-circle">
+      <img src="./images/icon-star.svg" alt="">
     </div>
+  
+    <h1>How did we do?</h1>
+  
+    <p>Please let us know how we did with your support request. All feedback is appreciated 
+      to help us improve our offering!</p>
+  
+      <div class="rating-buttons">
+        <button class="button b1">1</button>
+        <button class="button b2">2</button>
+        <button class="button b3">3</button>
+        <button class="button b4">4</button>
+        <button class="button b5">5</button>
+      </div>
+  
+      <button class="submit">submit</button>
+ </div>
+ </div>
 
-    <button class="submit"></button>
-
-
-
-
-
+<div class="main-popup">
+  <div class="margin-popup">
+    <img class= "popup-image" src="/images/illustration-thank-you.svg" alt="">
+    <div class="selected_score"><p class="rating-score"> You selected out of 5</p></div>
+    <h2>Thank you!</h2>
+    <p class="description">We appreciate you taking the time to give a rating. If you ever need more support, 
+      don't hesitate to get in touch!</p>
+  </div>
+</div>
 
 </main>
  <script src="/script.js"></script>
