--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet"> 
@@ -39,7 +39,7 @@
 
 <div class="main-popup">
   <div class="margin-popup">
-    <img class= "popup-image" src="/images/illustration-thank-you.svg" alt="">
+    <img class= "popup-image" src="./images/illustration-thank-you.svg" alt="">
     <div class="selected_score"><p class="rating-score"> You selected out of 5</p></div>
     <h2>Thank you!</h2>
     <p class="description">We appreciate you taking the time to give a rating. If you ever need more support, 
@@ -48,6 +48,6 @@
 </div>
 
 </main>
- <script src="/script.js"></script>
+ <script src="./script.js"></script>
 </body>
 </html>
